--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
     </header>
     <nav class="drawer" id="drawer">
         <ul>
-            <li><a href="/">首頁</a></li>
-            <li><a href="/late/">即時新聞</a></li>
-            <li><a href="/special/">專題報道</a></li>
-            <li><a href="/about/">關於我們</a></li>
+            <li><a href="/news-station">首頁</a></li>
+            <li><a href="/news-station/late/">即時新聞</a></li>
+            <li><a href="/news-station/special/">專題報道</a></li>
+            <li><a href="/news-station/about/">關於我們</a></li>
         </ul>
         <!-- 添加返回按钮 -->
         <button class="back-button" aria-label="Close menu" id="backButton">
@@ -34,15 +34,15 @@
         <div class="card">
             <div class="card-content">
                 <h2>即時新聞</h2>
-                <h3><a href="/late/1">仁宇精神推廣策進會官網及新聞中心官網正式發佈</a></h3>
-                <p><a href="/late/">查看更多……</a></p>
+                <h3><a href="/news-station/late/1">仁宇精神推廣策進會官網及新聞中心官網正式發佈</a></h3>
+                <p><a href="/news-station/late/">查看更多……</a></p>
             </div>
         </div>
         <div class="card">
             <div class="card-content">
                 <h2>專題報道</h2>
-                <h3><a href="/special/1">偉大謝仁宇同志的定向越野之旅</a></h3>
-                <p><a href="/special">查看更多……</a></p>
+                <h3><a href="/news-station/special/1">偉大謝仁宇同志的定向越野之旅</a></h3>
+                <p><a href="/news-station/special">查看更多……</a></p>
             </div>
         </div>
     </main>
