--- a/special/1/index.html
+++ b/special/1/index.html
@@ -19,10 +19,10 @@
     </header>
     <nav class="drawer" id="drawer">
         <ul>
-            <li><a href="/">首頁</a></li>
-            <li><a href="/late/">即時新聞</a></li>
-            <li><a href="/special/">專題報道</a></li>
-            <li><a href="/about/">關於我們</a></li>
+            <li><a href="/news-station">首頁</a></li>
+            <li><a href="/news-station/late/">即時新聞</a></li>
+            <li><a href="/news-station/special/">專題報道</a></li>
+            <li><a href="/news-station/about/">關於我們</a></li>
         </ul>
         <!-- 添加返回按钮 -->
         <button class="back-button" aria-label="Close menu" id="backButton">
