--- a/special/1/index.html
+++ b/special/1/index.html
@@ -32,6 +32,7 @@
     <main>
         <div class="card">
             <div class="card-content">
+                <button id="sway" class="action-button">轉到Sway查看</button>
                 <h4>專題報道</h4>
                 <h1>偉大謝仁宇同志的定向越野之旅</h1>
                 <h4>《新精神旗幟報》涉偉精領編輯事務處
