--- a/special/1/index.html
+++ b/special/1/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<link rel="alternate" type="application/atom+xml" title="仁宇精神推廣策進會新聞中心" href="/feed.xml">
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
