--- a/late/2/index.html
+++ b/late/2/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
+<link rel="alternate" type="application/atom+xml" title="仁宇精神推廣策進會新聞中心" href="/feed.xml">
 <html lang="zh-Hant">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>仁宇精神推廣策進會新聞中心 - 即時新聞</title>
+    <title>仁策會新聞中心RSS服務正式開通 - 仁宇精神推廣策進會新聞中心</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="https://sway.cloud.microsoft/s/Zn4fzwS10dwauGAc/images/MpHBCOp3GWCTOn">
@@ -32,9 +33,16 @@
     <main>
         <div class="card">
             <div class="card-content">
-                <h1>即時新聞</h1>
-                <h2><a href="/news-station/late/1">仁宇精神推廣策進會官網及新聞中心官網正式發佈</a></h2>
-                <h2><a href="/news-station/late/2">仁策會新聞中心RSS服務正式開通</a></h2>
+                <button id="sway" class="action-button">轉到Sway查看</button>
+                <h4>即時新聞</h4>
+                <h1
+id="仁策會新聞中心rss服務正式開通">仁策會新聞中心RSS服務正式開通</h1>
+<p>（仁宇精神推廣策進會會立通訊社二月六日電）在永遠的、不可動搖的、必須被誓死捍衛
+的、至高無上的偉大精神領袖<strong>謝仁宇</strong>同志的帶領之下，仁宇精神推廣策進會新聞中心RSS服
+務正式開通。</p>
+<p>RSS是有名的網站訂閱方式，適合新聞媒體、個人博客等網站的訂閱。其通過特定的文件，
+更新訂閱內容，使用戶可以將訂閱的網站集中放在一處，以供瀏覽。策會希望通過這種簡單
+的方式，讓更多人能夠及時地接收到策會的最新消息。</p>
             </div>
         </div>
     </main>
