--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <div class="card">
             <div class="card-content">
                 <h2>即時新聞</h2>
+                <h3><a href="/news-station/late/2">仁策會新聞中心RSS服務正式開通</a></h3>
                 <h3><a href="/news-station/late/1">仁宇精神推廣策進會官網及新聞中心官網正式發佈</a></h3>
                 <p><a href="/news-station/late/">查看更多……</a></p>
             </div>
